--- a/Java_003/.project
+++ b/Java_003/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java__002</name>
+	<name>Java_003</name>
 	<comment></comment>
 	<projects>
 	</projects>
